--- a/connectfour/views/web/static/stylesheets/src/game.sass
+++ b/connectfour/views/web/static/stylesheets/src/game.sass
@@ -1,18 +1,18 @@
 #game-screen
-  #game-feedback, #game-info
+  #game-info, #game-feedback
     padding: $whitespace / 4
     position: absolute
     top: 0
     opacity: 0.75
 
-  #game-feedback
+  #game-info
     left: 0
 
-  #game-info
-    right: 0
-
     td
-      padding-left: 5px
+      padding-right: 5px
+
+  #game-feedback
+    right: 0
 
   #game-board
     float: left
