--- a/connectfour/views/web/static/stylesheets/bin/styles.css
+++ b/connectfour/views/web/static/stylesheets/bin/styles.css
@@ -73,6 +73,10 @@ h4 {
 h1, h2, h3, h4 {
   font-weight: bold; }
 
+.error {
+  font-style: italic;
+  color: #ad102f; }
+
 input, button {
   background: #eee; }
 
@@ -108,6 +112,9 @@ dl:last-of-type {
 
 #setup-screen dl {
   margin-bottom: 13.33333px; }
+
+#setup-screen .error {
+  margin-left: 20px; }
 
 #game-screen #game-info, #game-screen #game-feedback {
   padding: 10px;
@@ -152,11 +159,36 @@ dl:last-of-type {
     margin-bottom: 80px; }
   #game-screen #game-control #game-players {
     margin-top: 10px; }
-    #game-screen #game-control #game-players td {
-      padding: 5px; }
-      #game-screen #game-control #game-players td.color-key {
-        height: 15px;
-        width: 15px; }
+    #game-screen #game-control #game-players table {
+      white-space: nowrap;
+      border-collapse: separate; }
+      #game-screen #game-control #game-players table tr td {
+        border-top: solid 3px #7ba5f0;
+        border-bottom: solid 3px #7ba5f0; }
+        #game-screen #game-control #game-players table tr td:first-child {
+          border-left: solid 3px #7ba5f0;
+          border-top-left-radius: 5px;
+          border-bottom-left-radius: 5px; }
+        #game-screen #game-control #game-players table tr td:last-child {
+          border-right: solid 3px #7ba5f0;
+          border-top-right-radius: 5px;
+          border-bottom-right-radius: 5px; }
+      #game-screen #game-control #game-players table tr.current td {
+        border-top: solid 3px gold;
+        border-bottom: solid 3px gold; }
+        #game-screen #game-control #game-players table tr.current td:first-child {
+          border-left: solid 3px gold;
+          border-top-left-radius: 5px;
+          border-bottom-left-radius: 5px; }
+        #game-screen #game-control #game-players table tr.current td:last-child {
+          border-right: solid 3px gold;
+          border-top-right-radius: 5px;
+          border-bottom-right-radius: 5px; }
+      #game-screen #game-control #game-players table tr td {
+        padding: 5px; }
+        #game-screen #game-control #game-players table tr td .color-key {
+          height: 10px;
+          width: 10px; }
   #game-screen #game-control #change-board input {
     width: 30px; }
 
