--- a/connectfour/views/web/static/stylesheets/src/game.sass
+++ b/connectfour/views/web/static/stylesheets/src/game.sass
@@ -37,13 +37,14 @@
 
   #game-control
     float: left
-    margin-left: $whitespace * 2
+    margin-left: $whitespace * 3
 
-    #game-players, #game-start
-      margin-bottom: $whitespace * 2
+    #game-start
+      margin-bottom: $whitespace
 
     #game-players
       margin-top: $whitespace / 4
+      margin-bottom: $whitespace
 
       table
         white-space: nowrap
