--- a/connectfour/views/web/static/stylesheets/src/font.sass
+++ b/connectfour/views/web/static/stylesheets/src/font.sass
@@ -1,11 +1,14 @@
 body
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif
+  font-family: "Lora", "Palatino Linotype", Palatino, serif
   font-size: $base-font-size
 
 
 h1
-  font-size: 48px
+  font-size: 64px
   color: white
+  text-align: center
+  font-family: "Raleway", sans-serif
+  letter-spacing: 1px
 
 
 h2
