--- a/connectfour/views/web/templates/head.html
+++ b/connectfour/views/web/templates/head.html
@@ -4,6 +4,16 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Raleway:900"
+  >
+
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Lora"
+  >
+
+  <link
     type="image/ico"
     rel="icon"
     href="{{ url_for('static', filename='images/favicon.ico') }}">
