--- a/connectfour/views/web/static/stylesheets/bin/styles.css
+++ b/connectfour/views/web/static/stylesheets/bin/styles.css
@@ -96,15 +96,6 @@ button {
     background: #aaa;
     cursor: pointer; }
 
-dl dt {
-  margin-bottom: 3px; }
-
-dl dd {
-  margin-bottom: 10px; }
-
-dl:last-of-type {
-  margin-bottom: none; }
-
 @keyframes blinker {
   to {
     opacity: 0.1; }
@@ -112,15 +103,21 @@ dl:last-of-type {
     opacity: 1.0; } }
 
 #setup-screen div {
-  margin-bottom: 40px; }
+  margin-bottom: 60px; }
   #setup-screen div:last-child {
     margin-bottom: none; }
 
 #setup-screen h3 {
-  margin-bottom: 13.33333px; }
+  margin-bottom: 20px; }
 
 #setup-screen dl {
   margin-bottom: 13.33333px; }
+  #setup-screen dl dt {
+    margin-bottom: 5px; }
+  #setup-screen dl dd {
+    margin-bottom: 10px; }
+  #setup-screen dl:last-of-type {
+    margin-bottom: none; }
 
 #setup-screen .error {
   margin-left: 20px; }
@@ -171,19 +168,22 @@ dl:last-of-type {
   #game-screen #game-info #game-feedback {
     display: absolute;
     width: 100%; }
-  #game-screen #game-info #game-board-form dl, #game-screen #game-info #game-board-form dt, #game-screen #game-info #game-board-form dd, #game-screen #game-info #game-board-form button {
-    display: inline-block; }
   #game-screen #game-info #game-board-form dl {
-    font-size: 13px; }
-  #game-screen #game-info #game-board-form dt {
-    margin-right: 5px; }
-  #game-screen #game-info #game-board-form dd {
-    margin-right: 10px; }
-    #game-screen #game-info #game-board-form dd input {
-      width: 20px;
-      text-align: center; }
+    font-size: 13px;
+    margin-bottom: 10px; }
+    #game-screen #game-info #game-board-form dl dt, #game-screen #game-info #game-board-form dl dd {
+      display: inline-block; }
+    #game-screen #game-info #game-board-form dl dt {
+      margin-right: 5px; }
+    #game-screen #game-info #game-board-form dl dd {
+      margin-right: 10px; }
+      #game-screen #game-info #game-board-form dl dd:last-of-type {
+        margin-right: 0; }
+      #game-screen #game-info #game-board-form dl dd input {
+        width: 20px;
+        text-align: center; }
   #game-screen #game-info #game-board-form button {
-    margin-left: 10px; }
+    float: right; }
 
 #game-screen #game-board {
   display: flex;
