--- a/connectfour/views/web/static/stylesheets/src/elements.sass
+++ b/connectfour/views/web/static/stylesheets/src/elements.sass
@@ -1,21 +1,26 @@
-input, button
-  background: #eee
-
-
 input
   padding: 3px
   border: none
   border-radius: 1px
+  background: $very-light-gray
 
 
 button
   padding: 5px 8px
   border: none
   border-radius: 3px
+  background: $button-color
+  color: $very-light-gray
+  font-size: $base-font-size
+  letter-spacing: 1px
 
   &:hover:enabled
-    background: #aaa
+    background: darken($button-color, 20%)
     cursor: pointer
+
+  &:disabled
+    background: lighten($button-color, 20%)
+    color: darken($very-light-gray, 10%)
 
 
 @keyframes blinker
