--- a/connectfour/views/web/static/stylesheets/src/styles.sass
+++ b/connectfour/views/web/static/stylesheets/src/styles.sass
@@ -7,6 +7,11 @@ $whitespace: 40px
 $body-padding: 5vmin
 
 $background-blue: cornflowerblue
+$button-purple: slateblue
+
+$background-color: lighten($background-blue, 5%)
+$button-color: $button-purple
+
 $yellow: gold
 $black: black
 $red: crimson
@@ -19,7 +24,8 @@ $gray: darkgray
 $orange: darkorange
 $lime: chartreuse
 
-$background-color: lighten($background-blue, 5%)
+$very-light-gray: gainsboro
+$dark-gray: dimgray
 
 
 @mixin sectionify($margin)
