--- a/connectfour/views/web/static/stylesheets/src/font.sass
+++ b/connectfour/views/web/static/stylesheets/src/font.sass
@@ -1,11 +1,11 @@
 body
-  font-family: "Lora", "Palatino Linotype", Palatino, serif
+  font-family: $base-font-family
   font-size: $base-font-size
 
 
 h1
   font-size: 64px
-  color: white
+  color: $white
   text-align: center
   font-family: "Raleway", sans-serif
   letter-spacing: 1px
