--- a/connectfour/views/web/static/stylesheets/src/styles.sass
+++ b/connectfour/views/web/static/stylesheets/src/styles.sass
@@ -3,15 +3,17 @@
 @import reset
 
 $base-font-size: 16px
-$whitespace: 40px
+$base-font-family: "Lora", "Palatino Linotype", Palatino, serif
 $body-padding: 5vmin
+$whitespace: 40px
 
-$background-blue: cornflowerblue
-$button-purple: slateblue
+$background-color: lighten(cornflowerblue, 5%)
 
-$background-color: lighten($background-blue, 5%)
-$button-color: $button-purple
+$button-color: slateblue
+$button-hover: darkslateblue
+$button-disabled: lighten($button-color, 20%)
 
+$white: snow
 $yellow: gold
 $black: black
 $red: crimson
