--- a/connectfour/views/web/static/stylesheets/src/elements.sass
+++ b/connectfour/views/web/static/stylesheets/src/elements.sass
@@ -7,7 +7,7 @@ input
   padding: 5px
   border: none
   border-radius: 1px
-  background: $very-light-gray
+  background: $pale-gray
 
 
 button
@@ -15,7 +15,7 @@ button
   border: none
   border-radius: 3px
   background: $button-color
-  color: $very-light-gray
+  color: $pale-gray
   letter-spacing: 1px
 
   &:hover:enabled
@@ -24,7 +24,7 @@ button
 
   &:disabled
     background: $button-disabled
-    color: darken($very-light-gray, 10%)
+    color: darken($pale-gray, 10%)
 
 
 @keyframes blinker
