--- a/connectfour/views/web/static/stylesheets/src/game.sass
+++ b/connectfour/views/web/static/stylesheets/src/game.sass
@@ -70,6 +70,7 @@
             margin-right: 0
 
           input
+            padding: 2px 5px
             width: 20px
             text-align: center
 
