--- a/connectfour/views/web/static/stylesheets/src/styles.sass
+++ b/connectfour/views/web/static/stylesheets/src/styles.sass
@@ -7,7 +7,10 @@ $base-font-family: "Lora", "Palatino Linotype", Palatino, serif
 $body-padding: 5vmin
 $whitespace: 40px
 
+$pale-gray: gainsboro
+$dark-gray: dimgray
 $background-color: lighten(cornflowerblue, 5%)
+$error-color: firebrick
 
 $button-color: slateblue
 $button-hover: darkslateblue
@@ -25,9 +28,6 @@ $pink: hotpink
 $gray: darkgray
 $orange: darkorange
 $lime: chartreuse
-
-$very-light-gray: gainsboro
-$dark-gray: dimgray
 
 
 @mixin sectionify($margin)
