--- a/connectfour/views/web/static/stylesheets/src/font.sass
+++ b/connectfour/views/web/static/stylesheets/src/font.sass
@@ -29,5 +29,6 @@ h1, h2, h3, h4
 
 .error
   font-style: italic
+  font-weight: bold
   letter-spacing: 1px
-  color: darken($orange, 15%)
+  color: $error-color
